fixed some issues on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,8 @@ h6 {
 #heros,
 #hero {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  height: fit-content;
   background-color: #2d2c31;
   min-height: 942px;
   /* background: url(../img/hero-bg.jpg) top center; */
